[tool.poetry]
name = "streamlit-jupyter"
version = "0.1.0"
description = ""
authors = ["Ryan <ryan.sudhakaran@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.10.0"
nbconvert = "^6.5.0"
traitlets = "^5.3.0"
watchfiles = "^0.15.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
